force-app/main/default/objects/Test_Case_Issues__c/Test_Case_Issues__c.object-meta.xml
<CustomObject>
    <label>Test Case Issues</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Issues ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Case Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>