force-app/main/default/objects/Test_Case_Issues__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Issue Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Issue_Disposition</valueSetName>
    </valueSet>
</CustomField>