force-app/main/default/objects/Test_Case_Issues__c/fields/Duplicate_Of__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duplicate Of</label>
    <referenceTo>Test_Case_Issues__c</referenceTo>
    <relationshipLabel>Duplicate Test Case Issues</relationshipLabel>
    <relationshipName>Test_Case_Issues_Dupes</relationshipName>
    <type>Lookup</type>
</CustomField>