force-app/main/default/objects/Test_Case_Issues__c/fields/Enhancement_Status__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_Status__c</fullName>
    <label>Enhancement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>