force-app/main/default/objects/Test_Case_Issues__c/fields/Feedback_Enhancement_Request__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Enhancement_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is checked if the Issue Disposition is an Enhancement</inlineHelpText>
    <label>Enhancement Request</label>
    <type>Checkbox</type>
</CustomField>