force-app/main/default/objects/Test_Case_Issues__c/fields/Old_Issue_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Old_Issue_Disposition__c</fullName>
    <description>Used to capture the original Issue Disposition value</description>
    <label>Old Issue Disposition</label>
    <length>80</length>
    <type>Text</type>
</CustomField>