force-app/main/default/objects/Test_Case_Issues__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <formula>Master_Test_Case__r.Organization__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organization</label>
    <type>Text</type>
</CustomField>