force-app/main/default/objects/Test_Case_Issues__c/fields/Organization_Group__c.field-meta.xml
<CustomField>
    <fullName>Organization_Group__c</fullName>
    <formula>TEXT(Test_Case__r.Organization_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organization Group</label>
    <type>Text</type>
</CustomField>