force-app/main/default/objects/Test_Case_Issues__c/fields/Production_Issue__c.field-meta.xml
<CustomField>
    <fullName>Production_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Production Issue</label>
    <type>Checkbox</type>
</CustomField>