force-app/main/default/objects/Test_Case_Issues__c/fields/Ready_for_Test_Addressed__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Test_Addressed__c</fullName>
    <label>Ready for Test/Addressed</label>
    <type>Date</type>
</CustomField>