force-app/main/default/objects/Test_Case_Issues__c/fields/Resolution_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resolution Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Test_Case_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>