force-app/main/default/objects/Test_Case_Issues__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Severity_UATAPP</valueSetName>
    </valueSet>
</CustomField>