force-app/main/default/objects/Test_Case_Issues__c/fields/Steps_to_Reproduce__c.field-meta.xml
<CustomField>
    <fullName>Steps_to_Reproduce__c</fullName>
    <inlineHelpText>Please be as specific as possible. You can paste screenshots and links.</inlineHelpText>
    <label>Steps to Reproduce</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>