force-app/main/default/objects/Test_Case_Issues__c/fields/Test_Case_Title__c.field-meta.xml
<CustomField>
    <fullName>Test_Case_Title__c</fullName>
    <description>Replacement Test Case Title field due to issues with formula</description>
    <label>Test Case Title</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>