force-app/main/default/objects/Test_Case_Issues__c/fields/Test_Record_URL__c.field-meta.xml
<CustomField>
    <fullName>Test_Record_URL__c</fullName>
    <label>Test Record URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>