force-app/main/default/objects/Test_Case_Issues__c/fields/Tester__c.field-meta.xml
<CustomField>
    <fullName>Tester__c</fullName>
    <formula>Test_Case__r.Tester__r.FirstName   &amp; &quot; &quot; &amp; Test_Case__r.Tester__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tester</label>
    <type>Text</type>
</CustomField>