force-app/main/default/objects/Test_Case_Issues__c/recordTypes/Test_Case_Issues_Classic.recordType-meta.xml
<RecordType>
    <fullName>Test_Case_Issues_Classic</fullName>
    <active>true</active>
    <label>Test Case Issues</label>
</RecordType>