force-app/main/default/objects/Test_Case_Issues__c/validationRules/Add_Duplicate_TC_Issue.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Duplicate_TC_Issue</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 OR(
ISPICKVAL(Issue_Status__c, &quot;Duplicate&quot;),
ISPICKVAL(Disposition__c , &quot;Duplicate&quot;)), 
 ISBLANK(Duplicate_Of__c )   
)</errorConditionFormula>
    <errorDisplayField>Duplicate_Of__c</errorDisplayField>
    <errorMessage>If this is a Duplicate Test Case Issue, link original Test Case Issue in the &quot;Duplicate of&quot; field.</errorMessage>
</ValidationRule>