force-app/main/default/objects/Test_Case_Issues__c/listViews/BGR_Open_Issues.listView-meta.xml
<ListView>
    <fullName>BGR_Open_Issues</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>zTest_Case_Title__c</columns>
    <columns>Issue_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date_Closed__c</columns>
    <columns>Ready_for_Test_Addressed__c</columns>
    <columns>Tester__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>contains</operation>
        <value>BGR</value>
    </filters>
    <label>BGR Open Issues</label>
</ListView>