force-app/main/default/objects/Test_Case_Issues__c/listViews/FA_Open_Issues.listView-meta.xml
<ListView>
    <fullName>FA_Open_Issues</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Issue_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date_Closed__c</columns>
    <columns>Ready_for_Test_Addressed__c</columns>
    <columns>Tester__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>contains</operation>
        <value>Flame Arrestor</value>
    </filters>
    <filters>
        <field>Issue_Status__c</field>
        <operation>equals</operation>
        <value>New,Assigned,In Progress,Ready for Test,Propose to Close</value>
    </filters>
    <label>FA Open Issues</label>
</ListView>