force-app/main/default/objects/Test_Case_Issues__c/listViews/My_Test_Case_Issues.listView-meta.xml
<ListView>
    <fullName>My_Test_Case_Issues</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Subject__c</columns>
    <columns>Test_Case__c</columns>
    <columns>Tester__c</columns>
    <columns>Issue_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Organization_Group__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Resolution_Assigned_To__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Organization__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Test Case Issues</label>
</ListView>