force-app/main/default/objects/Test_Case_Issues__c/listViews/Open_Test_Case_Issues.listView-meta.xml
<ListView>
    <fullName>Open_Test_Case_Issues</fullName>
    <columns>NAME</columns>
    <columns>Actual_Results__c</columns>
    <columns>Category__c</columns>
    <columns>Subject__c</columns>
    <columns>Test_Case__c</columns>
    <columns>Tester__c</columns>
    <columns>Issue_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Organization_Group__c</columns>
    <columns>Organization__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Resolution_Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Issue_Status__c</field>
        <operation>equals</operation>
        <value>New,Assigned,In Progress,Ready for Test,Propose to Close,Hold</value>
    </filters>
    <label>Open Test Case Issues</label>
</ListView>