force-app/main/default/objects/Test_Case_Issues__c/listViews/RD_All_Issues.listView-meta.xml
<ListView>
    <fullName>RD_All_Issues</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Issue_Status__c</columns>
    <columns>Tester__c</columns>
    <columns>Resolution_Assigned_To__c</columns>
    <columns>Test_Case_Title__c</columns>
    <columns>Disposition__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>contains</operation>
        <value>Rupture Disc</value>
    </filters>
    <label>RD All Issues</label>
</ListView>