force-app/main/default/objects/Test_Case_Issues__c/listViews/Triage.listView-meta.xml
<ListView>
    <fullName>Triage</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Test_Case__c</columns>
    <columns>Tester__c</columns>
    <columns>Issue_Status__c</columns>
    <columns>Disposition__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Organization_Group__c</columns>
    <columns>Organization__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Resolution_Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Issue_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Triage</label>
</ListView>